# detaxine-ui

./: .gitignore  Cargo.toml  README.md  detaxine-ui-99609155f755cae1.js  detaxine-ui-99609155f755cae1_bg.wasm  detaxine-ui-9f245b4d5955e9cb.js  detaxine-ui-9f245b4d5955e9cb_bg.wasm  detaxine-ui-e09a1502fdce6440.js  detaxine-ui-e09a1502fdce6440_bg.wasm  index.html  input-376d1c8bede37333.css  input-b1ce42de237e9442.css  output-46a69e7b291299ca.css  tailwind.sh
.github/workflows/: gh-pages.yml  main.yml
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/cli/src/commands/: init.rs
src/cli/src/steps/: cargo.rs  css.rs  html.rs  mod.rs  tailwind.rs  trunk.rs
src/core/: Cargo.toml  Trunk.toml  index.html
src/core/examples/: home.rs
src/core/src/: lib.rs
src/core/src/components/: mod.rs
src/core/src/components/actions/: button.rs
src/core/src/components/content/: carousel.rs  collapse.rs  richtext_editor.rs
src/core/src/components/data_display/: badge.rs  chip.rs  tag.rs  timeline.rs
src/core/src/components/data_display/table/: data_table.rs  pagination.rs
src/core/src/components/feedback/: popover.rs  progress.rs  spinner.rs
src/core/src/components/feedback/modal/: modal.rs
src/core/src/components/forms/: checkbox.rs  datepicker.rs  input.rs  radio_input.rs  reactive_form.rs  select.rs  textarea.rs  toggle_switch.rs
src/core/src/components/navigation/: breadcrumbs.rs  stepper.rs  tabs.rs
src/core/src/utils/: formatters.rs  forms.rs  mod.rs
src/core/styles/: input.css
