[package]
name = "detaxine-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
js-sys = { workspace = true }
markdown = { workspace = true }
chrono = { workspace = true }
icondata = { workspace = true }
leptos_icons = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-file = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
leptos_router = { workspace = true }

# rand = { workspace = true }
