[package]
name = "detaxine-ui"
version = "0.8.23"
edition = "2024"
description = "A UI Library for Leptos"
license = "MIT OR Apache-2.0"
license-file = "../../LICENSE-APACHE"
repository = "https://github.com/elonaire/detaxine-ui"
homepage = "https://elonaire.github.io/detaxine-ui/"
documentation = "https://docs.rs/detaxine-ui"
readme = "../../README.md"
keywords = ["leptos", "ui", "wasm", "rust", "components"]
categories = ["web-programming", "wasm"]

[dependencies]
leptos = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
js-sys = { workspace = true }
markdown = { workspace = true }
chrono = { workspace = true }
icondata = { workspace = true }
leptos_icons = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-file = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
leptos_router = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.docs.rs]
no-deps = true
